# multilingual-asr

./: .env  README.md  audio_eda.ipynb  inference.ipynb  main.py  pyproject.toml  whisper-training.ipynb
audio_data/: test.csv  train.csv
