[project]
name = "multilingual-automatic-speech-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "onnxruntime>=1.26.0",
    "openai-whisper>=20250625",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "xformers>=0.0.35",
]
